security/robomountie/manifests/deployment_nats.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: nats
  name: nats
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: nats
    deploymentconfig: nats
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: nats
        deploymentconfig: nats
    spec:
      containers:
        - command:
            - 'nats-top -s nats:nats:4222'
          image: >-
            docker.io/library/nats:latest
          imagePullPolicy: Always
          name: nats
          ports:
            - containerPort: 4222
              protocol: TCP
            - containerPort: 6222
              protocol: TCP
            - containerPort: 8222
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
