security/robomountie/manifests/prometheus.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  template:
    metadata:
      name: prometheus-main
      labels:
        app: prometheus
    spec:
        serviceAccountName: default
        # initContainers:
        # - name: "init-chown-data"
        #   image: "busybox:latest"
        #   imagePullPolicy: "IfNotPresent"
        #   resources:
        #       {}
              
        #   # 65534 is the nobody user that prometheus uses.
        #   command: ["chown", "-R", "65534:65534", "/data"]
        #   volumeMounts:
        #   - name: storage-volume
        #     mountPath: /data
        #     subPath: ""
        containers:
          - name: prometheus-configmap-reload
            image: "jimmidyson/configmap-reload:v0.2.2"
            imagePullPolicy: "IfNotPresent"
            args:
              - --volume-dir=/etc/config
              - --webhook-url=http://127.0.0.1:9090/-/reload
            resources: {}
            volumeMounts:
              - name: config-volume
                mountPath: /etc/config
                readOnly: true
          - name: prometheus-stewartshea-prometheus
            image: "prom/prometheus:v2.9.2"
            imagePullPolicy: "IfNotPresent"
            args:
              - --config.file=/etc/config/prometheus.yml
              - --storage.tsdb.path=/data
              - --web.console.libraries=/etc/prometheus/console_libraries
              - --web.console.templates=/etc/prometheus/consoles
              - --web.enable-lifecycle
            ports:
              - containerPort: 9090
            readinessProbe:
              httpGet:
                path: /-/ready
                port: 9090
              initialDelaySeconds: 30
              timeoutSeconds: 30
            livenessProbe:
              httpGet:
                path: /-/healthy
                port: 9090
              initialDelaySeconds: 30
              timeoutSeconds: 30
            resources: {}
            volumeMounts:
              - name: config-volume
                mountPath: /etc/config
              - name: storage-volume
                mountPath: /data
                subPath: ""
        volumes:
          - name: config-volume
            configMap:
              name: prometheus
          - name: storage-volume
            emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: ClusterIP
  ports:
    - port: 9090
      protocol: TCP
      name: webui
  selector:
    app: prometheus
