security/robomountie/manifests/gateway_argo_webhook.yml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: webhook-gateway-with-standard-nats
  labels:
    # gateway controller with instanceId "argo-events" will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
    # gateway controller will use this label to match with it's own version
    # do not remove
    argo-events-gateway-version: v0.10
spec:
  eventSource: "webhook-event-source"
  type: "webhook"
  processorPort: "9330"
  eventProtocol:
    type: "NATS"
    nats:
      url: "nats://nats.argo-events:4222"
      type: "Standard"
  template:
    metadata:
      name: "webhook-gateway-nats"
      labels:
        gateway-name: "webhook-gateway-nats"
    spec:
      containers:
        - name: "gateway-client"
          image: "argoproj/gateway-client"
          imagePullPolicy: "Always"
          command: ["/bin/gateway-client"]
        - name: "webhook-events"
          image: "argoproj/webhook-gateway"
          imagePullPolicy: "Always"
          command: ["/bin/webhook-gateway"]
      serviceAccountName: "argo-events-sa"
  service:
    metadata:
      name: webhook-gateway-svc
    spec:
      selector:
        gateway-name: "webhook-gateway-nats"
      ports:
        - port: 12000
          targetPort: 12000
      type: ClusterIP
